--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "ethers": "^5.7.0",
         "express": "^4.18.1",
         "mongoose": "^6.5.2"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/jest": "^28.1.7",
         "@types/node": "^18.7.11",
