--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.1.3",
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "ethers": "^5.7.0",
         "express": "^4.18.1",
+        "googleapis": "^108.0.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.5.2"
     },
     "devDependencies": {
